src/css/layout.css
/* Structural elements of the website */


/* Center when window is wider than 900px. */
body        { margin: auto; max-width: 900px }

/* Body contains `#side-bar`, a sidebar containing the navigation links,
 * and the main `#content` div. We keep the max-width of the content at 600px
 * for readability.
 */
#content    { max-width: 600px; }

/* The flex box layout is much easier to work with than the traditional layout.
 */
body        { display: flex; }

/* When wide enough we place the sidebar on the left, using the default
 * `flex-direct: row`. In this case we restrict the width of the sidebar.
 * We also restrict the width, and right align the text.
 * We also add a vertical offset so that the navigation is below
 * the main content's title.
 */
@media (width > 900px) {
  #side-bar { max-width: 300px;
              text-align: right;
              margin-top: 85px;
            }
}

/* Otherwise we move it below, using `order` place the sidebar after the
 * main content.
 */
@media (width < 900px) {
  body      { max-width: 600px;
              flex-direction: column;
            }
  #content  { order: 1; }
  #side-bar { order: 2; }
}

